# MLOps-Titanic-Survival

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt  uv.txt
config/: README.md  database_config.py  paths_config.py
dags/: README.md  extract_data_from_gcp.py
notebook/: README.md  titanic.ipynb
pipeline/: README.md  training_pipeline.py
src/: README.md  data_ingestion.py  data_processing.py  feature_store.py  model_training.py
static/: README.md  style.css
templates/: README.md  index.html
